show buttons, fixed content spacing

--- a/src/scss/blocks/_card.scss
+++ b/src/scss/blocks/_card.scss
@@ -30,6 +30,9 @@ $padding-h-large: get-size('900');
   }
   &__body {
     flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     ul {
       padding-left: 1rem;
       margin-bottom: 0;
@@ -131,5 +134,6 @@ $padding-h-large: get-size('900');
       }
     }
   }
+
 
 }
